# skepsis

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: index.md  methodology.md
examples/vulnerable-canlib/: canparse.c  poc_isotp_overflow.c
src/skepsis/: __init__.py  cli.py  config.py  models.py  orchestrator.py
src/skepsis/consensus/: __init__.py  aggregate.py  debate.py  prompts.py
src/skepsis/consensus/providers/: __init__.py  anthropic.py  base.py  claude_cli.py  gemini.py  mock.py  openai.py
src/skepsis/report/: __init__.py  console.py  markdown.py  sarif.py
src/skepsis/scanner/: __init__.py  engine.py  patterns.py
src/skepsis/verify/: __init__.py  sanitizer.py
tests/: conftest.py  test_cli.py  test_consensus.py  test_orchestrator.py  test_report.py  test_sanitizer.py  test_scanner.py
