[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skepsis"
version = "0.1.0"
description = "Multi-model consensus + sanitizer verification for hunting memory-safety bugs in C/C++ (automotive protocol parsers and beyond)."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "The Skepsis Authors" }]
keywords = [
    "security",
    "static-analysis",
    "vulnerability",
    "fuzzing",
    "llm",
    "automotive",
    "sarif",
    "sanitizer",
    "memory-safety",
    "c",
    "cpp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.27.0",
    "rich>=15.0.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.117.0"]
openai = ["openai>=2.46.0"]
treesitter = ["tree-sitter>=0.26.0", "tree-sitter-c>=0.24.2", "tree-sitter-cpp>=0.23.4"]
all = ["skepsis[anthropic,openai,treesitter]"]
dev = [
    "ruff>=0.15.22",
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-asyncio>=1.4.0",
]
docs = ["mkdocs-material>=9.7.7", "mkdocstrings[python]>=1.0.6"]

[project.urls]
Homepage = "https://github.com/0xTimi/skepsis"
Documentation = "https://0xtimi.github.io/skepsis"
Repository = "https://github.com/0xTimi/skepsis"
Issues = "https://github.com/0xTimi/skepsis/issues"
Changelog = "https://github.com/0xTimi/skepsis/blob/main/CHANGELOG.md"

[project.scripts]
skepsis = "skepsis.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/skepsis"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",      # pycodestyle + pyflakes
    "I",                # isort
    "N",                # pep8-naming
    "UP",               # pyupgrade
    "B",                # flake8-bugbear
    "C4",               # comprehensions
    "SIM",              # simplify
    "RUF",              # ruff-specific
    "TID",              # tidy-imports
]
ignore = ["N818"]  # allow exception names without "Error" suffix

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
# Typer's public API *requires* calls (typer.Option/Argument) in argument
# defaults; B008 is a false positive for this idiom.
"src/skepsis/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*", "tree_sitter.*", "tree_sitter_c.*", "tree_sitter_cpp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --cov=skepsis --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]
